src/test/ui/associated-types/issue-36499.stderr
error: leading `+` is not supported
  --> $DIR/issue-36499.rs:4:9
   |
LL |     2 + +2;
   |         ^ unexpected `+`
   |
help: try removing the `+`
   |
LL -     2 + +2;
LL +     2 + 2;
   | 

error: aborting due to previous error

